--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
     "@types/chrome": "^0.0.197",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^17.0.83",
+    "@types/react-dom": "^17.0.25",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "fontsource-roboto": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "icss-utils": "^5.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-material-ui-theme": "^1.0.9",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
@@ -30,5 +28,11 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.10"
   }
 }
